--- a/23-September/Style.css
+++ b/23-September/Style.css
@@ -1,4 +1,4 @@
 
-/*This line shows demo of application of external css*/.Class1{
+/*This line shows demo of application of external css*/.ExternalCss{
     background-color: yellow;
 }
